syntax = "proto3";
option java_multiple_files = true;
package com.devcortes.grpc;

import "google/protobuf/timestamp.proto";

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
    google.protobuf.Timestamp version = 2;
}

service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
}